# trieste

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Hartmann_6.ipynb  README.md  exp_utils.py  experiment.py  generate_constraints.sh  makefile  mypy.ini  pyproject.toml  redirect.html  redirect_autoapi.html  redirect_tutorials.html  sampling_playground.py  setup.py  tox.ini  toy.py  versions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  deploy.yaml  develop-checks.yaml  develop-deploy.yaml  quality-checks.yaml  release-checks.yaml
common_build/: constraints.txt  requirements.txt
common_build/format/: constraints.txt  requirements.txt
common_build/taskipy/: constraints.txt  requirements.txt
common_build/types/: constraints.txt  requirements.txt
common_build/types_old/: constraints.txt  requirements.txt
docs/: .gitignore  Makefile  README.md  advanced.rst  autoapi.html  bibliography.rst  conf.py  constraints.txt  development.rst  index.html  index.rst  introduction.rst  make.bat  refs.bib  requirements.txt  tutorials.html  tutorials.rst  versions.json
docs/0.11.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/0.12.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/0.13.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/0.13.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/1.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/1.1.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/1.2.0/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/2.0.0/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.0.0/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.1.0/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.2.0/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.3.0/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.3.1/: .buildinfo  bibliography.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.3.2/: .buildinfo  bibliography.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.3.3/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.3.4/: .buildinfo  bibliography.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/3.4.0/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/4.0.0/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/4.0.1/: .buildinfo  bibliography.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
docs/4.1.0/: .buildinfo  (+7 more)
lunar_lander/: Untitled.ipynb  common_code.py  empirical_pareto_front.ipynb  hacks.py  lander_bo.py  lander_constrained_bo.ipynb  lander_constrained_bo.py  lunar_lander.py  multi_objective_pareto_front.ipynb  multi_objective_try.py  requirements.txt  simple_functions.ipynb  turbo_test.py
scripts/: covariance.npy  mean.npy  mvn-debugging.ipynb  mvn-faster.ipynb  mvn.ipynb  qei-debugging.ipynb  run.py  run_benchmarks.sh  run_benchmarks_objectives.sh  run_qei_benchmarks.sh  threshold.npy  utils.py
tests/: conftest.py  constraints.txt  requirements.txt
trieste/: __init__.py  ask_tell_optimization.py  bayesian_optimizer.py  data.py  logging.py  observer.py  pareto.py  space.py  type.py  types.py  version.py
(+3942 files in other folders)
