# Copyright 2020 The Trieste Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "trieste",
    "tests/util",
    "tests/unit",
    "tests/integration",
]

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.py$'
exclude = '\.pct.py$'

[tool.isort]
profile = "black"
skip_gitignore = true
skip_glob = "docs/notebooks"
line_length = 100

[tool.taskipy.tasks]
tests = "pytest --mypy --cov trieste --cov-report html:htmlcov"
mypy = "pytest --mypy --cache-clear -m mypy -v"
check_format = "pytest -v --black --flake8 --isort -m 'black or flake8 or isort'"
format = "black . && flake8 . && isort ."
